fixing the story section on mobile

--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -254,7 +254,6 @@ body {
   box-shadow: 0rem 0.5rem 1rem rgba(0, 0, 0, 0.15); }
 
 .card {
-  perspective: 150rem;
   height: 50rem;
   position: relative;
   /************* FRONT SIDE **************/
@@ -342,6 +341,36 @@ body {
   .card__price--value {
     font-size: 6rem;
     font-weight: 400; }
+  @media (max-width: 56.25em) {
+    .card {
+      height: auto;
+      background-color: white;
+      box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+      .card__side {
+        height: auto;
+        position: relative;
+        border-radius: 3px;
+        box-shadow: none; }
+        .card__side--back {
+          transform: rotateY(0);
+          clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%); }
+      .card:hover .card__side--front {
+        transform: rotateY(0); }
+      .card:hover .card__side--back {
+        transform: rotateY(0); }
+      .card__cta {
+        position: relative;
+        top: 0%;
+        left: 0%;
+        transform: translate(0);
+        width: 100%;
+        padding: 4rem 1rem; }
+      .card__price-box {
+        margin-bottom: 2rem; }
+      .card__price--only {
+        font-size: 2rem; }
+      .card__price--value {
+        font-size: 4rem; } }
 
 .composition {
   position: relative; }
@@ -541,6 +570,13 @@ body {
   background-color: rgba(255, 255, 255, 0.8);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
   transform: skewX(-12deg); }
+  @media (max-width: 56.25em) {
+    .story {
+      width: 100%;
+      padding: 4rem 4rem 4rem 2rem; } }
+  @media (max-width: 37.5em) {
+    .story {
+      transform: skewX(0deg); } }
   .story__shape {
     height: 15rem;
     width: 15rem;
@@ -551,6 +587,13 @@ body {
     clip-path: circle(50% at 50% 50%);
     transform: skewX(12deg);
     position: relative; }
+    @media (max-width: 37.5em) {
+      .story__shape {
+        height: 10rem;
+        width: 10rem; } }
+    @media (max-width: 37.5em) {
+      .story__shape {
+        transform: skewX(0deg); } }
   .story__image {
     height: 100%;
     /*  A  */
@@ -560,6 +603,9 @@ body {
     backface-visibility: hidden; }
   .story__text {
     transform: skewX(12deg) translateX(4rem); }
+    @media (max-width: 37.5em) {
+      .story__text {
+        transform: skewX(0deg) translateX(4rem); } }
   .story__caption {
     position: absolute;
     top: 50%;
