--- a/Natours/sass/components/_card.scss
+++ b/Natours/sass/components/_card.scss
@@ -1,6 +1,4 @@
 .card {
-    perspective: 150rem;
-    // we define perspective on the parent where the transform occurs.
     height: 50rem;
     // we give the parent and the side the same height to fix the 0 height caused by absolute
     position: relative;
@@ -143,5 +141,46 @@
     &__price--value {
         font-size: 6rem;
         font-weight: 400;
+    }
+    @include respond(tab-port) {
+        height: auto;
+        background-color: white;
+        box-shadow: 0 1rem 2rem rgba($color: #000000, $alpha: 0.2);
+
+        &__side {
+            height: auto;
+            position: relative;
+            border-radius: 3px;
+            box-shadow: none;
+            &--back {
+                transform: rotateY(0);
+                clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+            }
+        }
+        &:hover &__side--front {
+            transform: rotateY(0);
+        }
+        &:hover &__side--back {
+            transform: rotateY(0);
+        }
+        &__cta {
+            position: relative;
+            top: 0%;
+            left: 0%;
+            transform: translate(0);
+            width: 100%;
+            padding: 4rem 1rem;
+        }
+
+        &__price-box {
+            margin-bottom: 2rem;
+        }
+        &__price--only {
+            font-size: 2rem;
+        }
+
+        &__price--value {
+            font-size: 4rem;
+        }
     }
 }
