--- a/Natours/sass/components/_story.scss
+++ b/Natours/sass/components/_story.scss
@@ -7,6 +7,13 @@
     background-color: rgba($color: #fff, $alpha: 0.8);
     box-shadow: 0 1rem 2rem rgba($color: #000000, $alpha: 0.2);
     transform: skewX(-12deg);
+    @include respond(tab-port) {
+        width: 100%;
+        padding: 4rem 4rem 4rem 2rem;
+    }
+    @include respond(phone) {
+        transform: skewX(0deg);
+    }
     // this will not work on the text since the transform property cannot be applied twice.
     // * > {
     //     transform: skewY(12deg);
@@ -16,6 +23,10 @@
         // create a rectangle first and then transform it to a circle
         height: 15rem;
         width: 15rem;
+        @include respond(phone) {
+            height: 10rem;
+            width: 10rem;
+        }
         // float is obligatory
         float: left;
         /*shape-outside only works when float and height and width*/
@@ -26,6 +37,9 @@
         // convert the shape of the image to a circle
         clip-path: circle(50% at 50% 50%);
         transform: skewX(+12deg);
+        @include respond(phone) {
+            transform: skewX(0deg);
+        }
         position: relative;
     }
     &__image {
@@ -38,6 +52,9 @@
     }
     &__text {
         transform: skewX(+12deg) translateX(4rem);
+        @include respond(phone) {
+            transform: skewX(0deg) translateX(4rem);
+        }
     }
     &__caption {
         // relative to the shape.
